--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Title</title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+<!--
 <div class="debug">
 	<div>
 		<div>
@@ -25,7 +26,7 @@
 		</div>
 	</div>
 </div>
-
+-->
 
 <!--FIRST SCREEN START-->
 <section class="firstContainer">
