edit last block

--- a/src/index.html
+++ b/src/index.html
@@ -153,10 +153,15 @@
 			<div class="fourContainer__descrrounds">
 				<div class="fourContainer__desctext">
 					<span>Research</span>
+					<img src="pict/round_arrow.png" alt="arrow">
 					<span>Product <br>Design</span>
+					<img src="pict/round_arrow.png" alt="arrow">
 					<span>UX Design & <br>Prototyping</span>
+					<img src="pict/round_arrow.png" alt="arrow">
 					<span>UI Design</span>
+					<img src="pict/round_arrow.png" alt="arrow">
 					<span>Development</span>
+					<img src="pict/round_arrow.png" alt="arrow">
 					<span>Delivery</span>
 				</div>
 			</div>
